[package]
name = "cputime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ctrlc = "3.2"
libbpf-rs = "0.21.2"
nix = { version = "0.27.1", default-features = false, features = ["net", "user"] }
plain = "0.2"

clap = { version = "4.0", features = ["derive"] }
libc = "*"
blazesym="=0.2.0-alpha.6"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["ansi", "env-filter", "fmt"]}

[build-dependencies]
libbpf-cargo = "0.21.2"